# Project-Alcia

./: .clang-format  .gitignore  CMakeLists.txt  Hero.cpp  Hero.h  Item.cpp  Item.h  Monster.cpp  Monster.h  README.md  god.cpp  god.h  main.cpp  system_related.cpp  system_related.h
data/: Items.json  Locations.json  items.json
src/: Hero.cpp  Hero.h  Item.cpp  Item.h  Monster.cpp  Monster.h  god.cpp  god.h  system_related.cpp  system_related.h
src/Core/: Action.cpp  Action.h  CMakeLists.txt  CoreDefinitions.h  CoreUtils.h  Location.cpp  Location.h  Parser.cpp  Parser.h  World.cpp  World.h
src/Core/Equipment/: Equipment.cpp  Equipment.h
src/Core/Inventory/: Inventory.cpp  Inventory.h
src/Core/Item/: Item.cpp  Item.h
src/Core/Item/Gear/: Gear.cpp  Gear.h
src/Core/Item/Gear/Instance/: GearInstance.cpp  GearInstance.h
src/Core/Item/Generator/: Generator.h
src/Core/Item/Mixins/: CrafteableMixin.h  EquipeableMixin.h
src/Core/ItemRegistry/: ItemRegistry.cpp  ItemRegistry.h
src/Core/Stats/: Stats.cpp  Stats.h
src/Core/_Item/: Item.cpp  Item.h
src/Core/_Item/Gear/: Gear.cpp  Gear.h
src/Core/_Item/Gear/Instance/: GearInstance.cpp  GearInstance.h
src/Core/_Item/Generator/: Generator.h
src/Core/_Item/Interfaces/: IUseable.h
src/Core/_Item/Mixins/: EquipeableMixin.h
src/Legacy/: CMakeLists.txt  Hero.cpp  Hero.h  Item.cpp  Item.h  Monster.cpp  Monster.h  god.cpp  god.h
src/UI/: CMakeLists.txt  SystemRelated.cpp  SystemRelated.h  UISystem.cpp  UISystem.h  Utils.h
src/UI/Menu/: AMenu.h  InventoryMenu.cpp  InventoryMenu.h  InventoryStatsMenu.cpp  InventoryStatsMenu.h
src/UI/Utils/: DrawUtils.cpp  DrawUtils.h
src/UI/Utils/System/: SysCall.h
